--- a/frontend/env.yaml
+++ b/frontend/env.yaml
@@ -15,7 +15,7 @@ config:
 
   signupEnabled: true
 
-  locales: [en-GB, en-US, uk, ru]
+  locales: [en-GB, en-US, uk-UA, ru-RU]
 
   pushNotifications:
     guestEnabled: false
