--- a/lib/app.yaml
+++ b/lib/app.yaml
@@ -32,20 +32,20 @@ components:
             description: !i18n [Project updates]
             roles: [administrator, test]
             channels:
-              telegram: { active: true }
+              telegram: { subscribed: true }
 
           updates1:
             name: !i18n [Updates]
             description: !i18n [Project updates]
             roles: [test]
             channels:
-              telegram: { active: true }
+              telegram: { subscribed: true }
 
           test:
             name: !i18n [Updates]
             description: !i18n [Project updates]
             roles: ~
             channels:
-              telegram: { active: true }
+              telegram: { subscribed: true }
 
 config: ~
