--- a/lib/app.yaml
+++ b/lib/app.yaml
@@ -35,14 +35,35 @@ components:
               telegram: { subscribed: true }
 
           updates1:
-            name: !i18n [Updates]
+            name: !i18n [Updates 1]
             description: !i18n [Project updates]
             roles: [test]
             channels:
               telegram: { subscribed: true }
 
           test:
-            name: !i18n [Updates]
+            name: !i18n [Test]
+            description: !i18n [Project updates]
+            roles: ~
+            channels:
+              telegram: { editable: false, subscribed: true }
+
+          test1:
+            name: !i18n [Test]
+            description: !i18n [Project updates]
+            roles: ~
+            channels:
+              telegram: { editable: false, subscribed: true }
+
+          test2:
+            name: !i18n [Test]
+            description: !i18n [Project updates]
+            roles: ~
+            channels:
+              telegram: { enabled: false, subscribed: true }
+
+          test3:
+            name: !i18n [Test]
             description: !i18n [Project updates]
             roles: ~
             channels:
