--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "homepage": "https://github.com/zdm/playground",
     "bugs": {
         "url": "https://github.com/zdm/playground/issues",
-        "email": "zdm@softvisio.net"
+        "email": "zdm <zdm@softvisio.net>"
     },
     "repository": {
         "type": "git",
