--- a/.dockerignore
+++ b/.dockerignore
@@ -1,13 +1,11 @@
-**
+# git
+/.git*
 
-!/bin
-!/lib
-!/resources
-!/src
-!/package.json
+# common
+/data
+/wiki
+/env.local.yaml
+/env.*.local.yaml
 
-!/frontend/bin
-!/frontend/lib
-!/frontend/resources
-!/frontend/src
-!/frontend/package.json
+# node
+node_modules
