--- a/.dockerignore
+++ b/.dockerignore
@@ -2,10 +2,10 @@
 /.git*
 
 # common
-/data
-/wiki
-/env.local.yaml
-/env.*.local.yaml
+/**/data
+/**/wiki
+/**/env.local.yaml
+/**/env.*.local.yaml
 
 # node
-node_modules
+/**/node_modules
