--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,12 @@
-# git
 /.git*
-
-# common
-/**/data
-/**/wiki
-/**/env.local.yaml
-/**/env.*.local.yaml
-
-# node
 /**/node_modules
+
+/data
+/wiki
+/env.local.yaml
+/env.*.local.yaml
+
+/frontend/data
+/frontend/wiki
+/frontend/env.local.yaml
+/frontend/env.*.local.yaml
