feat: nginx component

--- a/lib/app.yaml
+++ b/lib/app.yaml
@@ -10,7 +10,7 @@ services:
       rpc: true
       webpack: true
       telegramNotificationsBot: true
-      nginx: true
+      # nginx: true
 
 defaultService: api
 
