--- a/lib/app.yaml
+++ b/lib/app.yaml
@@ -30,43 +30,43 @@ components:
 
         notifications:
           updates:
-            name: !l10n [Updates]
-            description: !l10n [Project updates]
+            name: !l10nt Updates
+            description: !l10nt Project updates
             roles: [administrator, test]
             channels:
               telegram: { subscribed: true }
 
           updates1:
-            name: !l10n [Updates 1]
-            description: !l10n [Project updates]
+            name: !l10nt Updates 1
+            description: !l10nt Project updates
             roles: [test]
             channels:
               telegram: { subscribed: true }
 
           test:
-            name: !l10n [Test]
-            description: !l10n [Project updates]
+            name: !l10nt Test
+            description: !l10nt Project updates
             roles: ~
             channels:
               telegram: { editable: false, subscribed: true }
 
           test1:
-            name: !l10n [Test]
-            description: !l10n [Project updates]
+            name: !l10nt Test
+            description: !l10nt Project updates
             roles: ~
             channels:
               telegram: { editable: false, subscribed: true }
 
           test2:
-            name: !l10n [Test]
-            description: !l10n [Project updates]
+            name: !l10nt Test
+            description: !l10nt Project updates
             roles: ~
             channels:
               telegram: { enabled: false, subscribed: true }
 
           test3:
-            name: !l10n [Test]
-            description: !l10n [Project updates]
+            name: !l10nt Test
+            description: !l10nt Project updates
             roles: ~
             channels:
               telegram: { subscribed: true }
@@ -74,8 +74,8 @@ components:
   notifications:
     types:
       other:
-        name: !l10n [Other]
-        description: !l10n [Other unclassified notifications]
+        name: !l10nt Other
+        description: !l10nt Other unclassified notifications
         channels:
           internal: { editable: true }
           push: { editable: true }
