--- a/lib/app.yaml
+++ b/lib/app.yaml
@@ -29,53 +29,18 @@ components:
               - acl:*
 
         notifications:
-          updates:
-            name: !l10nt Updates
-            description: !l10nt Project updates
-            roles: [administrator, test]
-            channels:
-              telegram: { subscribed: true }
-
-          updates1:
-            name: !l10nt Updates 1
-            description: !l10nt Project updates
-            roles: [test]
-            channels:
-              telegram: { subscribed: true }
-
           test:
-            name: !l10nt Test
-            description: !l10nt Project updates
+            name: !l10nt ACL test
+            description: !l10nt Test notifications
             roles: ~
             channels:
               telegram: { editable: false, subscribed: true }
-
-          test1:
-            name: !l10nt Test
-            description: !l10nt Project updates
-            roles: ~
-            channels:
-              telegram: { editable: false, subscribed: true }
-
-          test2:
-            name: !l10nt Test
-            description: !l10nt Project updates
-            roles: ~
-            channels:
-              telegram: { enabled: false, subscribed: true }
-
-          test3:
-            name: !l10nt Test
-            description: !l10nt Project updates
-            roles: ~
-            channels:
-              telegram: { subscribed: true }
 
   notifications:
     types:
-      other:
-        name: !l10nt Other
-        description: !l10nt Other unclassified notifications
+      test:
+        name: !l10nt Test
+        description: !l10nt Test notifications
         channels:
           internal: { editable: true }
           push: { editable: true }
