--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/zdm/playground.git",
+        "url": "git+https://github.com/zdm/playground.git",
         "directory": "frontend"
     },
     "license": "ISC",
