--- a/lib/app.yaml
+++ b/lib/app.yaml
@@ -8,7 +8,7 @@ services:
       api: true
       rpc: true
       webpack: true
-      telegramNotificationsBot: true
+      telegramSupportBot: true
       # nginx: true
 
 defaultService: api
