--- a/lib/components/telegram-test-bot/config.yaml
+++ b/lib/components/telegram-test-bot/config.yaml
@@ -6,7 +6,7 @@ optionalDependencies: ~
 config:
   telegram:
     locales: [en-GB, en-US, ru-RU, uk-UA]
-    signuoEnabled: true
+    signupEnabled: true
 
     acl:
       roles:
