--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "playground",
+    "name": "@zdm/playground",
     "version": "1.0.2",
     "private": true,
     "homepage": "https://zdm.github.io/playground/",
