fix: rmail address

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "homepage": "https://zdm.github.io/playground/",
     "bugs": {
         "url": "https://github.com/zdm/playground/issues",
-        "email": "zdm <zdm@softvisio.net>"
+        "email": "root <root@softvisio.net>"
     },
     "repository": {
         "type": "git",
