--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "url": "git+https://github.com/zdm/playground.git"
     },
     "license": "Proprietary Software",
-    "author": "zdm <zdm@softvisio.net>",
+    "author": "root <root@softvisio.net>",
     "type": "module",
     "imports": {
         "#core/*": "@softvisio/core/*",
