--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,8 @@
         "url": "git+https://github.com/zdm/playground.git",
         "directory": "frontend"
     },
-    "license": "ISC",
-    "author": "zdm <zdm@softvisio.net>",
+    "license": "Proprietary Software",
+    "author": "root <root@softvisio.net>",
     "type": "module",
     "imports": {
         "#core/*": "@softvisio/core/*",
