fix: swarm update script

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,7 @@ version: "3.9"
 services:
   playground:
     image: ghcr.io/zdm/playground
+    depends_on: [postgresql]
     init: true
     stop_grace_period: 5m
 
@@ -19,7 +20,7 @@ services:
     command: run
 
     secrets:
-      - { source: env.yaml, target: /var/local/package/env.yaml }
+      - { source: playground, target: /var/local/package/env.yaml }
 
     networks: [main]
 
@@ -29,7 +30,7 @@ services:
     build: .
 
 secrets:
-  env.yaml: { file: env.yaml }
+  playground: { file: env.yaml }
 
 networks:
   main: { external: true }
