fix: stack network

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,9 @@
 #!/usr/bin/env -S docker stack deploy --with-registry-auth playground -c
 
-version: "3.9"
-
 # NOTE deploy
 # docker stack deploy --with-registry-auth -c docker-stack.yaml playground
+
+version: "3.9"
 
 services:
   playground:
@@ -22,7 +22,7 @@ services:
     secrets:
       - { source: playground, target: /var/local/package/env.yaml }
 
-    networks: [main]
+    networks: [network]
 
     volumes:
       - { type: tmpfs, target: /dev/shm, tmpfs: { size: 1073741824 } }
@@ -33,4 +33,6 @@ secrets:
   playground: { file: env.yaml }
 
 networks:
-  main: { external: true }
+  network:
+    name: ${DOCKER_STACK_NETWORK_NAME:-ingress}
+    external: true
