fix: docker depends_on

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,9 @@
 services:
   playground:
     image: ghcr.io/zdm/playground
-    depends_on: [postgresql]
+    depends_on:
+      postgresql:
+        condition: service_healthy
     init: true
     stop_grace_period: 5m
 
