--- a/compose.yaml
+++ b/compose.yaml
@@ -1,9 +1,7 @@
 services:
   playground:
     image: ghcr.io/zdm/playground
-    depends_on:
-      postgresql:
-        condition: service_healthy
+    depends_on: [postgresql]
     init: true
     stop_grace_period: 5m
 
