--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,9 +32,9 @@
         }
     },
     "scripts": {
-        "build": "softvisio-webpack build --mode=production",
-        "build-cordova": "softvisio-webpack build --mode=production --cordova",
-        "dev": "softvisio-webpack dev --mode=development"
+        "build": "node --preserve-symlinks --preserve-symlinks-main node_modules/@softvisio/webpack/bin/softvisio-webpack.js build --mode=production",
+        "build-cordova": "node --preserve-symlinks --preserve-symlinks-main node_modules/@softvisio/webpack/bin/softvisio-webpack.js build --mode=production --cordova",
+        "dev": "node --preserve-symlinks --preserve-symlinks-main node_modules/@softvisio/webpack/bin/softvisio-webpack.js dev --mode=development"
     },
     "devDependencies": {
         "@softvisio/vue-ext": "^8.0.0"
