--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "author": "root <root@softvisio.net>",
     "type": "module",
     "imports": {
+        "#app/*": "@softvisio/app/*",
         "#core/*": "@softvisio/core/*",
         "#lib/*": "./lib/*.js",
         "#resources/*": "./resources/*"
@@ -23,7 +24,7 @@
         "dev": "node bin/main.js run --mode=development"
     },
     "dependencies": {
-        "@softvisio/app-component-text-search": "^2.0.0",
-        "@softvisio/core": "^7.0.0"
+        "@softvisio/app": "^1.0.0-alpha.0",
+        "@softvisio/app-component-text-search": "^2.0.0"
     }
 }
