--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "dev": "node bin/main.js run --mode=development"
     },
     "dependencies": {
-        "@softvisio/app": "^1.0.0-alpha.0",
+        "@softvisio/app": "^2.0.0",
         "@softvisio/app-text-search": "^2.0.0"
     }
 }
