--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "dev": "node bin/main.js run --mode=development"
     },
     "dependencies": {
-        "@softvisio/app": "^2.0.0",
-        "@softvisio/app-text-search": "^2.0.0"
+        "@softvisio/app-text-search": "^2.0.0",
+        "@softvisio/core": "^7.101.6"
     }
 }
