chore: update frontend package name

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@zdm/playground-frontend",
+    "name": "@zdm/playground/frontend",
     "version": "1.0.2",
     "private": true,
     "description": "",
