chore: update package metadata

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "description": "",
     "keywords": [],
-    "homepage": "https://github.com/zdm/playground",
+    "homepage": "https://zdm.github.io/playground/",
     "bugs": {
         "url": "https://github.com/zdm/playground/issues",
         "email": "root <root@softvisio.net>"
