--- a/frontend/env.yaml
+++ b/frontend/env.yaml
@@ -1,8 +1,8 @@
 env: {}
 
 build:
-  extVersion: 7.9.0
-  ewcVersion: 7.5.0
+  # extVersion: 7.9.0
+  # ewcVersion: 7.5.0
 
 config:
   title: Playground
