--- a/lib/app.yaml
+++ b/lib/app.yaml
@@ -7,7 +7,7 @@ services:
     components:
       acme: false
       api: true
-      nginx: true
+      # nginx: true
       rpc: true
       storage: true
       telegramSupportBot: true
