chore: rename c0rejs namespace

--- a/cli.config.yaml
+++ b/cli.config.yaml
@@ -14,11 +14,11 @@ docs:
   logo: true
 
   aliases:
-    /api: https://raw.githubusercontent.com/c0rejs/core/main/docs/api.md
+    /api: https://raw.githubusercontent.com/corejslib/core/main/docs/api.md
 
   externalTypes:
-    - c0rejs/core
-    - c0rejs/result
+    - corejslib/core
+    - corejslib/result
 
   app:
     api:
