--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,6 @@
 services:
   playground:
-    image: ghcr.io/zdm/playground
+    image: ghcr.io/softvisio/playground
     depends_on: [postgresql]
     init: true
     stop_grace_period: 5m
